--- a/17. My CV/WebContent/css/media.css
+++ b/17. My CV/WebContent/css/media.css
@@ -1,10 +1,32 @@
-@media ( max-width : 768px) {
+@media screen and ( max-width : 480px) {
+	.education-uni {
+		margin-left: 0em;
+		margin-right: 0em;
+	}
+	.service-container {
+		grid-template-columns: 100% !important;
+		padding: 0 0 2em 0 !important;
+	}
+	.education h1 {
+		font-size: 2em;
+	}
+	.wrapper {
+		grid-template-columns: repeat(1, 350px) !important;
+		grid-template-rows: repeat(9, 250px) !important;
+	}
+	.repositories h1 {
+		font-size: 2em;
+	}
+}
+
+}
+@media screen and ( max-width : 768px) {
 	.service-container {
 		padding: 0 0 0 0;
 	}
 }
 
-@media ( max-width : 992px) {
+@media screen and ( max-width : 992px) {
 	.my-info {
 		grid-template-columns: 100%;
 	}
@@ -56,6 +78,10 @@
 		margin-bottom: 2em;
 	}
 	.skills {
-			grid-template-columns: 100%;
+		grid-template-columns: 100%;
+	}
+	.wrapper {
+		grid-template-columns: repeat(2, 350px);
+		grid-template-rows: repeat(5, 250px);
 	}
 }
