--- a/17. My CV/WebContent/Exercise_03/Solution/styles.css
+++ b/17. My CV/WebContent/Exercise_03/Solution/styles.css
@@ -1,31 +1,42 @@
-.gallery {
+.wrapper {
 	display: grid;
-	grid-template-columns: repeat(4, 80px);
-	grid-template-rows: repeat(8, 80px);
-	grid-gap: 5px;
+	grid-template-columns: 32% 32% 32%;
+	grid-gap: 20px 20px;
 }
 
-@media only screen and (max-width: 800px) {
-	.gallery {
-		display: grid;
-		grid-template-columns: repeat(2, 80px);
-		grid-template-rows: repeat(16, 80px);
-		grid-gap: 5px;
+header, main, aside, footer {
+	height: 40px;
+	background: #000000;
+	color: #ffffff;
+	font-size: 14px;
+	padding-top: 20px;
+	padding-left: 20px;
+	border-radius: 3px;
+}
+
+header {
+	grid-column-start: span 3;
+}
+
+main {
+	grid-column-start: span 2;
+}
+
+footer {
+	grid-column-start: span 3;
+}
+
+@media screen and (max-width: 600px) {
+	header {
+		grid-column-start: span 3;
 	}
-}
-
-ul {
-	list-style: none;
-	justify-content: center;
-}
-
-ul li img {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-}
-
-.big {
-	grid-row: span 2;
-	grid-column: span 2;
+	main {
+		grid-column-start: span 3;
+	}
+	aside {
+		grid-column-start: span 3;
+	}
+	footer {
+		grid-column-start: span 3;
+	}
 }
