--- a/17. My CV/WebContent/css/media.css
+++ b/17. My CV/WebContent/css/media.css
@@ -1,57 +1,3 @@
-@media screen and (max-width : 480px) {
-	.education-uni {
-		margin-left: 0em;
-		margin-right: 0em;
-	}
-	.service-container {
-		grid-template-columns: 100% !important;
-		padding: 0 0 2em 0 !important;
-	}
- 	.education h1 {
-		font-size: 2em;
-	}
-	.repositories h1 {
-		font-size: 2em;
-	} 
-	.copyright {
-		font-size: 0.7em !important;
-	}
-	.icons>i {
-		top: calc(15%) !important;
-	}
-}
-
-@media screen and (max-width : 768px) {
-	.align-left img {
-		width: 50% !important;
-		height: auto !important;
-	}
-	.nav-icon {
-		line-height: 0.1 !important;
-		font-size: 1.5em !important;
-	}
-	.service-container {
-		padding: 0 0 0 0;
-	}
-	.wrapper {
-		grid-template-columns: repeat(1, 350px) !important;
-		grid-template-rows: repeat(9, 250px) !important;
-	}
-	.design-patterns {
-		grid-row: span 1 !important;
-		height: 250px !important;
-	}
-	.footer-container {
-		grid-template-columns: repeat(1, 350px) !important;
-		grid-template-rows: repeat(3, 150px) !important;
-	}
-	.email {
-		padding-top: 20px !important;
-		grid-row: span 1 !important;
-		height: 150px !important;
-	}
-}
-
 @media screen and (max-width : 1080px) {
 	.my-info {
 		grid-template-columns: 100%;
@@ -124,5 +70,75 @@
 	}
 	.icons>i {
 		top: calc(30%);
+	}
+}
+
+@media screen and (max-width : 768px) {
+	.align-left img {
+		width: 50%;
+		height: auto;
+	}
+	.nav-icon {
+		line-height: 0.1;
+		font-size: 1.5em;
+	}
+	.service-container {
+		padding: 0 0 0 0;
+	}
+	.wrapper {
+		grid-template-columns: repeat(1, 350px);
+		grid-template-rows: repeat(9, 250px);
+	}
+	.design-patterns {
+		grid-row: span 1;
+		height: 250px;
+	}
+	.footer-container {
+		grid-template-columns: repeat(1, 350px);
+		grid-template-rows: repeat(3, 150px);
+	}
+	.email {
+		padding-top: 20px;
+		grid-row: span 1;
+		height: 150px;
+	}
+}
+
+@media screen and (max-width : 480px) {
+	.align-right-info p {
+		font-size: 0.8em;
+	}
+	.education-uni {
+		margin-left: 0em;
+		margin-right: 0em;
+	}
+	.service-container {
+		grid-template-columns: 100%;
+		padding: 0 0 2em 0;
+	}
+	.education h1 {
+		font-size: 2em;
+	}
+	.repositories h1 {
+		font-size: 2em;
+	}
+	.copyright {
+		font-size: 0.7em;
+	}
+	.icons>i {
+		top: calc(15%);
+	}
+}
+
+@media screen and (max-width : 375px) {
+	
+	
+	
+	.footer-container {
+		grid-template-columns: repeat(1, 300px);
+		grid-template-rows: repeat(3, 150px);
+	}
+	.footer-container .container {
+		width: 300px;
 	}
 }
