--- a/17. My CV/WebContent/css/typography.css
+++ b/17. My CV/WebContent/css/typography.css
@@ -2,11 +2,11 @@ html {
 	font: 21px/1.5 Arial, sans-serif;
 }
 
-@media screen and (min-width: 480px) { html { font-size: 12px } }
-@media screen and (min-width: 600px) { html { font-size: 14px } }
-@media screen and (min-width: 800px) { html { font-size: 16px } }
-@media screen and (min-width: 1300px) { html { font-size: 21px } }
-
+@media screen and (max-width: 1080px) { html { font-size: 21px } }
+@media screen and (max-width: 768px) { html { font-size: 16px } }
+@media screen and (max-width: 480px) { html { font-size: 14px } }
+@media screen and (max-width: 375px) { html { font-size: 12px } }
+ 
 body {
 }
 
