--- a/17. My CV/WebContent/css/media.css
+++ b/17. My CV/WebContent/css/media.css
@@ -65,9 +65,6 @@
 	.copyright {
 		font-size: 1em;
 	}
-	.icons>i {
-		top: calc(30%);
-	}
 }
 
 @media screen and (max-width : 768px) {
@@ -99,6 +96,12 @@
 		grid-row: span 1;
 		height: 150px;
 	}
+	.footer-container p {
+		font-size: 1em;
+	}
+	.icons>i {
+		top: calc(25%);
+	}
 }
 
 @media screen and (max-width : 480px) {
@@ -111,7 +114,7 @@
 		padding: 0 0 2em 0;
 	}
 	.icons>i {
-		top: calc(15%);
+		top: calc(30%);
 	}
 }
 
