--- a/17. My CV/WebContent/css/skills.css
+++ b/17. My CV/WebContent/css/skills.css
@@ -2,17 +2,17 @@
 	color: black;
 	display: grid;
 	grid-template-columns: 50% 50%;
-	justify-content: space-around;
 }
 
-.education h1 {
+.education-h1 {
 	text-align: center;
 	color: #44c7f4;
 	text-transform: uppercase;
-	margin: 1em 0 0.5em 0;
+	margin: 0em 0 0.5em 0;
 	font-size: 2.5em;
 	letter-spacing: 0.1em;
 	font-weight: 400;
+	padding-top: 0.7em;
 }
 
 .education-uni {
@@ -66,32 +66,23 @@
 	padding-left: 1em;
 }
 
-.skills-1 h1 {
+.skills-h1 {
 	text-align: center;
 	color: #ffffff;
 	text-transform: uppercase;
-	margin: 1em 0 0.5em 0;
+	margin: 0em 0 0.5em 0;
 	font-size: 2.5em;
 	letter-spacing: 0.1em;
 	font-weight: 400;
+	padding-top: 0.7em;
 }
 
 .skills-1 {
 	background: url('../images/banner1.jpg') no-repeat center;
-	width: 100%;
-}
-
-.skills-2 h1 {
-	text-align: center;
-	color: #ffffff;
-	text-transform: uppercase;
-	margin: 1em 0 0.5em 0;
-	font-size: 2.5em;
-	letter-spacing: 0.1em;
-	font-weight: 400;
+	background-size: 100% 100%;
 }
 
 .skills-2 {
 	background: url('../images/banner1.jpg') no-repeat center;
-	width: 100%;
+	background-size: 100% 100%;
 }
