--- a/17. My CV/WebContent/css/about.css
+++ b/17. My CV/WebContent/css/about.css
@@ -26,6 +26,7 @@
 .align-left img {
 	width: 70%;
 	height: auto;
+	display: table-cell;
 	margin-left: 6em;
 }
 
@@ -54,18 +55,10 @@
 
 .align-right-info p {
 	color: #696969;
-	font-size: 0.8em; 
+	font-size: 0.8em;
 }
 
 .align-right-info a {
 	text-decoration: none;
-	color:#44c7f4;
+	color: #44c7f4;
 }
-
-
-
-
-
-
-
-
