--- a/17. My CV/WebContent/css/repositories.css
+++ b/17. My CV/WebContent/css/repositories.css
@@ -11,6 +11,7 @@
 }
 
 .wrapper {
+	margin:3em auto 2em auto;
 	display: grid;
 	grid-template-columns: repeat(3, 350px);
 	grid-template-rows: repeat(3, 250px);
