--- a/17. My CV/WebContent/css/footer.css
+++ b/17. My CV/WebContent/css/footer.css
@@ -16,6 +16,18 @@ footer {
 	text-align: center;
 }
 
+#nav-google {
+	display: none;
+	width: 600px;
+	height: 450px;
+	margin-top: 4px;
+}
+
+.close {
+	padding:0 12px 0 12px;
+	float: right;
+}
+
 .copyright {
 	margin-top: 3em;
 	padding-bottom: 2em;
