--- a/17. My CV/WebContent/css/footer.css
+++ b/17. My CV/WebContent/css/footer.css
@@ -114,3 +114,35 @@ footer p a {
 	color: #44c7f4;
 	transition: all 0.5s ease-in;
 }
+
+#map {
+	display: none;
+	background: #efefef;
+	border: 1px solid black;
+	width: 350px;
+	height: 150px;
+}
+
+#close {
+	display: none;
+	margin-left: 320px;
+	cursor: pointer;
+	border: none;
+	outline: none;
+	background: none;
+	font-size: 1.25em;
+}
+
+#map>button {
+	opacity: 0.7;
+	position: relative;
+	float: right;
+	right: 5px;
+	bottom: 155px;
+	transition: 0.5s;
+	color: black;
+}
+
+.iframe-map {
+	
+}
