--- a/17. My CV/WebContent/css/footer.css
+++ b/17. My CV/WebContent/css/footer.css
@@ -10,7 +10,6 @@ footer {
 	grid-gap: 20px;
 	justify-content: center;
 	background: black;
-	margin-top: 1.5em;
 	padding-top: 3em;
 	color: white;
 	text-align: center;
@@ -61,6 +60,7 @@ footer p a {
 	width: 50px;
 	height: 50px;
 	margin: 0 auto;
+	z-index: 0;
 }
 
 .icons>a i {
@@ -117,32 +117,19 @@ footer p a {
 
 #map {
 	display: none;
-	background: #efefef;
-	border: 1px solid black;
-	width: 350px;
-	height: 150px;
-}
-
-#close {
-	opacity: 0.7;
-	position: relative;
-	float: right;
-	right: 5px;
-	bottom: 155px;
-	transition: 0.5s;
-	color: black;
-	display: none;
-	margin-left: 320px;
-	cursor: pointer;
-	border: none;
-	outline: none;
-	background: none;
-	font-size: 1.25em;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0%;
+	left: 0%;
+	z-index: 1;
+	background-color: rgba(0, 0, 0, 0.3)
 }
 
 iframe {
-	width: 350px;
-	height: 150px;
-	frameborder: 0;
-	border: 0;
+	position: fixed;
+	width: 80%;
+	height: 80%;
+	top: 10%;
+	left: 10%;
 }
