--- a/17. My CV/WebContent/css/about.css
+++ b/17. My CV/WebContent/css/about.css
@@ -1,3 +1,4 @@
+@import url('variables.css');
 .about-me h1 {
 	font-size: 2.4rem;
 	margin-top: 0.4em;
@@ -12,7 +13,7 @@
 
 .subheading {
 	text-align: center;
-	color: #44c7f4;
+	color: var(--electric-blue);
 	letter-spacing: 7px;
 	font-size: 1em;
 	margin-bottom: 2em;
@@ -38,24 +39,24 @@
 }
 
 .align-right-info {
-	color: #696969;
-	border-bottom: 1px dashed #44c7f4;
+	color: var(--steel-grey);
+	border-bottom: 1px dashed var(--electric-blue);
 	padding-bottom: 1em;
 }
 
 .align-right-info h4 {
-	color: #313131;
+	color: var(--choral-grey);
 	text-transform: uppercase;
 	font-weight: 400;
 	font-size: 1.2rem;
 }
 
 .align-right-info p {
-	color: #696969;
+	color: var(--steel-grey);
 	font-size: 0.8em;
 }
 
 .align-right-info a {
 	text-decoration: none;
-	color: #44c7f4;
+	color: var(--electric-blue);
 }
