--- a/17. My CV/WebContent/css/contacts.css
+++ b/17. My CV/WebContent/css/contacts.css
@@ -1,3 +1,4 @@
+@import url('variables.css');
 .contacts h1 {
 	font-size: 2.4rem;
 	margin-top: 0.8em;
@@ -12,7 +13,7 @@
 
 .contacts p {
 	text-align: center;
-	color: #44c7f4;
+	color: var(--electric-blue);
 	letter-spacing: 7px;
 	font-size: 13px;
 	margin-bottom: 4em;
