--- a/17. My CV/WebContent/css/footer.css
+++ b/17. My CV/WebContent/css/footer.css
@@ -1,3 +1,4 @@
+@import url('variables.css');
 footer {
 	color: white;
 	text-align: center;
@@ -55,7 +56,7 @@ footer p a {
 }
 
 .icons {
-	background-color: #44c7f4;
+	background-color: var(--electric-blue);
 	border-radius: 30px;
 	width: 50px;
 	height: 50px;
@@ -76,17 +77,17 @@ footer p a {
 }
 
 .icons:hover+#location {
-	color: #44c7f4;
+	color: var(--electric-blue);
 	transition: all 0.5s ease-in;
 }
 
 .icons:hover>#fas {
-	color: #44c7f4;
+	color: var(--electric-blue);
 	transition: all 0.5s ease-in;
 }
 
 .icons:hover>a #fas {
-	color: #44c7f4;
+	color: var(--electric-blue);
 	transition: all 0.5s ease-in;
 }
 
@@ -101,7 +102,7 @@ footer p a {
 }
 
 .icons:hover+#mail a {
-	color: #44c7f4;
+	color: var(--electric-blue);
 	transition: all 0.5s ease-in;
 }
 
@@ -111,7 +112,7 @@ footer p a {
 }
 
 .icons:hover+#call {
-	color: #44c7f4;
+	color: var(--electric-blue);
 	transition: all 0.5s ease-in;
 }
 
