--- a/17. My CV/WebContent/css/skills.css
+++ b/17. My CV/WebContent/css/skills.css
@@ -1,3 +1,5 @@
+@import url('variables.css');
+
 .skills {
 	color: black;
 	display: grid;
@@ -6,7 +8,7 @@
 
 .education-h1 {
 	text-align: center;
-	color: #44c7f4;
+	color: var(--electric-blue);
 	text-transform: uppercase;
 	margin: 0em 0 0.5em 0;
 	font-size: 2.5em;
@@ -62,7 +64,7 @@
 }
 
 .education-year  h6 {
-	color: #44c7f4;
+	color: var(--electric-blue);
 	padding-left: 1em;
 }
 
