--- a/17. My CV/WebContent/css/typography.css
+++ b/17. My CV/WebContent/css/typography.css
@@ -1,3 +1,5 @@
+@import url('variables.css');
+
 html {
 	font: 21px/1.5 Arial, sans-serif;
 }
@@ -48,7 +50,7 @@ table td, table th {
 
 table thead th {
 	text-align: center;
-	background: #bffa85;
+	background: var(--electric-blue);
 }
 
 table tr:nth-child(odd) td {
