--- a/17. My CV/WebContent/css/variables.css
+++ b/17. My CV/WebContent/css/variables.css
@@ -1,5 +1,10 @@
 :root {
 	--electric-blue: #44c7f4;
 	--steel-grey:#696969;
+	--pewter-grey:#808080;
 	--choral-grey:#313131;
+	--iron-grey:#999;
+	--charcoal:#2e2e2e;
+	--pearl-river:#f2f2f2;
+	--papaya-orange:#eb5424;
 }
