--- a/17. My CV/WebContent/css/navigation.css
+++ b/17. My CV/WebContent/css/navigation.css
@@ -11,7 +11,7 @@
 .navigation a {
 	float: left;
 	display: block;
-	color: #f2f2f2;
+	color: var(--pearl-river);
 	text-align: center;
 	padding: 1.2em 1.2em;
 	text-decoration: none;
@@ -20,7 +20,7 @@
 
 .navigation a:hover {
 	background-color: white;
-	color: #696969;
+	color: var(--steel-grey);
 }
 
 .navigation .icon {
