--- a/17. My CV/WebContent/css/styles.css
+++ b/17. My CV/WebContent/css/styles.css
@@ -10,7 +10,9 @@
 
 @import url('services.css');
 
-@import url('skills.css');
+@import url('my-education.css');
+
+@import url('my-skills.css');
 
 @import url('repositories.css');
 
