--- a/17. My CV/WebContent/css/styles.css
+++ b/17. My CV/WebContent/css/styles.css
@@ -14,6 +14,8 @@
 
 @import url('my-skills.css');
 
+@import url('certificates.css');
+
 @import url('repositories.css');
 
 @import url('contacts.css');
