--- a/17. My CV/WebContent/css/certificates.css
+++ b/17. My CV/WebContent/css/certificates.css
@@ -11,11 +11,12 @@
 	align-items: center;
 }
 
-.sertificate{
-	width:86%;
+.sertificate {
+	width: 86%;
 	margin-left: 7%;
-	margin-bottom:5%;
+	margin-bottom: 5%;
 	text-align: center;
+	cursor: pointer;
 }
 
 .sertificate h4 {
@@ -30,3 +31,27 @@
 	font-size: 0.8em;
 }
 
+.sertificate img {
+	width: 60px;
+	height: auto;
+}
+
+.certificate {
+	display: none;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0%;
+	left: 0%;
+	z-index: 1;
+	background-color: rgba(0, 0, 0, 0.3);
+}
+embed {
+	position: fixed;
+	width: 80%;
+	height: 100%;
+	top: 0%;
+	left: 10%;
+    animation-name: fadeIn;
+    animation-duration: 1s; 
+}
