--- a/17. My CV/WebContent/css/media.css
+++ b/17. My CV/WebContent/css/media.css
@@ -45,6 +45,10 @@
 	.skills {
 		grid-template-columns: 100%;
 	}
+	.sertificate {
+		width: 70%;
+		margin-left: 15%;
+	}
 	.wrapper {
 		grid-template-columns: repeat(2, 350px);
 		grid-template-rows: repeat(5, 250px);
