--- a/17. My CV/WebContent/css/repositories.css
+++ b/17. My CV/WebContent/css/repositories.css
@@ -33,7 +33,7 @@
 	background: url('../images/3.png') no-repeat center;
 }
 
-.my-sql {
+.footer-my-sql {
 	background: url('../images/4.png') no-repeat center;
 }
 
@@ -45,7 +45,7 @@
 	background: url('../images/6.png') no-repeat center;
 }
 
-.design-patterns {
+.footer-design-patterns {
 	background: url('../images/7.png') no-repeat center;
 }
 
