--- a/17. My CV/WebContent/css/variables.css
+++ b/17. My CV/WebContent/css/variables.css
@@ -3,8 +3,10 @@
 	--steel-grey:#696969;
 	--pewter-grey:#808080;
 	--choral-grey:#313131;
+	--anchor-grey:#d2d6da;
 	--iron-grey:#999;
 	--charcoal:#2e2e2e;
 	--pearl-river:#f2f2f2;
 	--papaya-orange:#eb5424;
+	
 }
