--- a/17. My CV/WebContent/css/typography.css
+++ b/17. My CV/WebContent/css/typography.css
@@ -38,7 +38,7 @@ table {
 	width: 100%;
 	table-layout: fixed;
 	margin-bottom: 1.5rem;
-	border: 1px solid #CCC;
+	border: 1px solid var(--anchor-grey);
 	border-spacing: 0;
 	border-collapse: collapse;
 }
@@ -54,12 +54,12 @@ table thead th {
 }
 
 table tr:nth-child(odd) td {
-	background: #F1F1F1;
+	background: white;
 }
 
 table tr:hover td {
 	background: black;
-	color: #FFF;
+	color: white;
 	border-color: transparent;
 }
 
