--- a/17. My CV/WebContent/css/services.css
+++ b/17. My CV/WebContent/css/services.css
@@ -26,8 +26,8 @@
 .service-container {
 	color: white;
 	display: grid;
-	grid-template-columns: 30% 30% 30%;
-	align-items: center;
+	grid-template-columns: 32% 32% 32%;
+/* 	align-items: center; */
 	justify-content: space-around;
 	padding: 0 4em 4em 4em;
 }
