--- a/18. IMPACT AUTO/WebContent/css/styles.css
+++ b/18. IMPACT AUTO/WebContent/css/styles.css
@@ -1,8 +1,7 @@
-@import
-	url('https://fonts.googleapis.com/css?family=PT+Serif&display=swap');
-
 @import url('reset.css');
 
 @import url('typography.css');
 
 @import url('header.css');
+
+@import url('media.css');
