--- a/18. IMPACT AUTO/WebContent/css/header.css
+++ b/18. IMPACT AUTO/WebContent/css/header.css
@@ -6,7 +6,7 @@ header {
 	display: grid;
 	grid-template-columns: 15% 60% 25%;
 	margin-top: 25px;
-	margin-left: 25px;
+	margin-left: 20px;
 	padding-bottom: 0px;
 }
 
@@ -138,4 +138,8 @@ select {
 
 .register:focus {
 	outline: none;
+}
+
+.register:hover {
+	cursor: pointer;
 }
