--- a/18. IMPACT AUTO/WebContent/css/media.css
+++ b/18. IMPACT AUTO/WebContent/css/media.css
@@ -2,8 +2,7 @@
 	.logo img {
 		width: 100px;
 		margin-top: 4px;
-		padding-left: 5px;
-		margin-left: 10px;
+		margin-left: 20px;
 	}
 	header {
 		margin-left: 0px;
@@ -14,7 +13,7 @@
 	}
 	.signin {
 		margin-left: auto;
-		margin-right: 5px;
+		margin-right: 20px;
 	}
 	.input-group {
 		margin-left: 3em;
@@ -22,11 +21,13 @@
 }
 
 @media screen and (max-width : 768px) {
+	.logo img {
+		margin-left: 7px;
+	}
 	header {
 		grid-template-columns: 50% 50%;
 		grid-template-rows: repeat(2, 40px);
 	}
-	
 	.input-group {
 		grid-row-start: 2;
 		grid-column: 1/span 2;
@@ -41,12 +42,21 @@
 		margin-left: auto;
 		margin-right: 5px;
 	}
+	.search-car {
+		margin: 0px 10px 0 10px;
+	}
 }
 
 @media screen and (max-width : 480px) {
+	.logo img {
+		margin-left: 2px;
+	}
 	header {
 		grid-template-columns: 10% 90%;
 		grid-template-rows: repeat(2, 40px);
+	}
+	.form-control {
+		margin-left: 5px;
 	}
 	.signin {
 		grid-column: 2/2;
@@ -55,11 +65,13 @@
 	.input-group {
 		width: 100%;
 	}
+	.search-car {
+		margin: 0px 5px 0 5px;
+	}
 }
 
 @media screen and (max-width : 375px) {
 	.logo img {
-
 		margin-left: 0px;
 	}
 	.signin {
