--- a/18. IMPACT AUTO/WebContent/css/media.css
+++ b/18. IMPACT AUTO/WebContent/css/media.css
@@ -2,7 +2,6 @@
 	.logo img {
 		width: 100px;
 		margin-top: 4px;
-		margin-left: 20px;
 	}
 	header {
 		margin-left: 0px;
@@ -13,7 +12,6 @@
 	}
 	.signin {
 		margin-left: auto;
-		margin-right: 20px;
 	}
 	.input-group {
 		margin-left: 3em;
@@ -21,8 +19,9 @@
 }
 
 @media screen and (max-width : 768px) {
-	.logo img {
-		margin-left: 7px;
+	body {
+		margin-left: 10px;
+		margin-right: 10px;
 	}
 	header {
 		grid-template-columns: 50% 50%;
@@ -36,27 +35,17 @@
 	}
 	.form-control {
 		width: 100%;
-		margin-left: 10px;
-	}
-	.signin {
-		margin-left: auto;
-		margin-right: 5px;
-	}
-	.search-car {
-		margin: 0px 10px 0 10px;
 	}
 }
 
 @media screen and (max-width : 480px) {
-	.logo img {
-		margin-left: 2px;
+	body {
+		margin-left: 5px;
+		margin-right: 5px;
 	}
 	header {
 		grid-template-columns: 10% 90%;
 		grid-template-rows: repeat(2, 40px);
-	}
-	.form-control {
-		margin-left: 5px;
 	}
 	.signin {
 		grid-column: 2/2;
@@ -65,20 +54,15 @@
 	.input-group {
 		width: 100%;
 	}
-	.search-car {
-		margin: 0px 5px 0 5px;
-	}
 }
 
 @media screen and (max-width : 375px) {
 	.logo img {
-		margin-left: 0px;
+		width: 60px;
+		margin-top: 7px;
 	}
 	.signin {
 		grid-column: 2/2;
 		grid-row-start: 1;
-	}
-	.form-control {
-		margin-left: 5px;
 	}
 }
