--- a/18. IMPACT AUTO/WebContent/css/header.css
+++ b/18. IMPACT AUTO/WebContent/css/header.css
@@ -53,9 +53,9 @@ header {
 	font-size: 15px;
 	border-radius: 0;
 	border-color: transparent;
-	background-color: #017dd6;
 	border-top-right-radius: 4px;
 	border-bottom-right-radius: 4px;
+	background-image: url(../images/magn.png);
 }
 
 .search-button:focus {
@@ -137,6 +137,7 @@ select {
 	border: none;
 	font-family: Tahoma;
 	font-size: 12px;
+	
 }
 
 .register:focus {
