--- a/18. IMPACT AUTO/WebContent/css/header.css
+++ b/18. IMPACT AUTO/WebContent/css/header.css
@@ -6,12 +6,16 @@ body {
 	margin-top: 25px;
 	margin-left: 20px;
 	margin-right: 20px;
+	
 }
 
-header {
+.header {
 	display: grid;
 	grid-template-columns: 15% 60% 25%;
 	padding-bottom: 0px;
+	margin-bottom: 10px;
+	margin-left: 10px;
+	margin-right: 10px;
 }
 
 .logo img {
@@ -44,6 +48,7 @@ header {
 
 ::placeholder {
 	color: #c4c4c4;
+	font-size: 10px;
 }
 
 .search-button {
@@ -106,7 +111,6 @@ select {
 	margin-top: 2px;
 	display: flex;
 	color: #017dd6;
-	color: #017dd6;
 }
 
 .sign {
@@ -131,13 +135,13 @@ select {
 }
 
 .register {
-	height: 25px;
+	height: 30px;
 	margin-left: 10px;
+	margin-top: -2px;
 	padding: 0px 10px 0px 10px;
 	background-color: #fdb81e;
 	color: black;
 	border-radius: 20px;
-	padding: 0px 10px 0px 10px;
 	border: none;
 	font-family: Tahoma;
 	font-size: 12px;
