--- a/18. IMPACT AUTO/WebContent/css/media.css
+++ b/18. IMPACT AUTO/WebContent/css/media.css
@@ -96,6 +96,7 @@
 	.select-location {
 		width: 170px;
 		grid-column: 1/span 1;
+		background-image: url(../images/arrows.png);
 	}
 	.search-now {
 		width: 170px;
@@ -157,10 +158,6 @@
 }
 
 @media screen and (max-width : 375px) {
-	.logo img {
-		width: 60px;
-		margin-top: 7px;
-	}
 	.signin {
 		grid-column: 2/2;
 		grid-row-start: 1;
