--- a/17. My CV/WebContent/css/my-education.css
+++ b/17. My CV/WebContent/css/my-education.css
@@ -51,7 +51,9 @@
 	font-size: 0.8em;
 	color: var(--pewter-grey);
 }
-
+.education-info a {
+	text-decoration: none;
+}
 .education-year {
 	margin-right: 1em;
 }
