--- a/17. My CV/WebContent/css/media.css
+++ b/17. My CV/WebContent/css/media.css
@@ -60,8 +60,7 @@
 		grid-template-columns: 100%;
 	}
 	.sertificate {
-		width: 70%;
-		margin-left: 15%;
+		margin-left: 2em;
 	}
 	.wrapper {
 		grid-template-columns: repeat(2, 350px);
@@ -139,6 +138,9 @@
 	}
 	.icons>a i {
 		top: calc(30%);
+	}
+	.sertificate img {
+		height: 60px;
 	}
 }
 
