Fixing hibernate link

--- a/17. My CV/WebContent/css/repositories.css
+++ b/17. My CV/WebContent/css/repositories.css
@@ -29,7 +29,7 @@
 	background: url('../images/2.png') no-repeat center;
 }
 
-.hibernate {
+.hibernate-repo {
 	background: url('../images/3.png') no-repeat center;
 }
 
