--- a/17. My CV/WebContent/css/media.css
+++ b/17. My CV/WebContent/css/media.css
@@ -132,6 +132,10 @@
 		margin-left: 0em;
 		margin-right: 0em;
 	}
+	.my-experience .education-uni {
+		margin-left: 0em;
+		margin-right: 0em;
+	}
 	.service-container {
 		grid-template-columns: 100%;
 		padding: 0 0 2em 0;
